added on the git site
added on the git site

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         </div>
     </div>
     <div class="footer-left">
-        <span>ТРЕБА ДОРОБИТИ, краще переробити</span>
+        <span>ТРЕБА ДОРОБИТИ, краще переробити +++ </span>
     </div>
 </footer>
 
