--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@
     </div>
     <div class="footer-left">
         <span>ТРЕБА ДОРОБИТИ, краще переробити +++ </span>
+        <span>pull OK!</span>
     </div>
 </footer>
 
